# Conways-Game-of-Life

./: .gitignore  CMakeLists.txt  README.md  cellBoard.h  configuration.h  events.cpp  events.h  main.cpp
